--- a/apps/dashboard/styles.css
+++ b/apps/dashboard/styles.css
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'tailwindcss';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html,
+body {
+  height: 100%;
+  font-family: 'Inter', sans-serif;
+  margin: 0;
+}
